--- a/core/idrepo/logic/pom.xml
+++ b/core/idrepo/logic/pom.xml
@@ -140,6 +140,33 @@ under the License.
       <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- JUnit 5 BOM per versioni allineate -->
+    <dependency>
+      <groupId>org.junit</groupId>
+      <artifactId>junit-bom</artifactId>
+      <version>5.10.2</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+
+
+    <!-- Mockito per JUnit 5 -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>5.12.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Se usi AssertJ -->
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.26.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -221,6 +248,13 @@ under the License.
             <syncope.connid.location>file:${bundles.directory}/</syncope.connid.location>
             <TESTCONTAINERS_REUSE_ENABLE>true</TESTCONTAINERS_REUSE_ENABLE>
           </systemPropertyVariables>
+          <!-- Evita problemi col module path su JDK 21 -->
+          <useModulePath>false</useModulePath>
+          <!-- Per vedere stacktrace completi in CI -->
+          <trimStackTrace>false</trimStackTrace>
+          <!-- Non fallire se (temporaneamente) non trova test -->
+          <failIfNoTests>false</failIfNoTests>
+          <!-- Pattern di default: *Test.java, *Tests.java, *TestCase.java -->
         </configuration>
       </plugin>
       
@@ -228,6 +262,7 @@ under the License.
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
       </plugin>
+
     </plugins>
   </build>
 </project>
